--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "karma-requirejs": "^0.2.2",
     "karma-spec-reporter": "0.0.23",
     "protractor": "^3.0.0"
+  },
+  "dependencies": {
+    "http-server": "^0.8.5"
   }
 }
